--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.38MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.99MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-334.8KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-1.07MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇺🇸 美国-5.16MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.59MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-496.8KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-2.27MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-976.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: xmrh012.xmrth-node.xyz, port: 15885, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh012.xmrth-node.xyz}}
+  - {name: 🇺🇸 美国-2.29MB/s(Youtube:不良林), server: xmrj002.xmrth-node.xyz, port: 15880, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrj002.xmrth-node.xyz}}
+  - {name: 🇮🇳 印度-2.98MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.65MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.06MB/s(Youtube:不良林), server: cmjm.julvab.com, port: 30718, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-496.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-496.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-496.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-496.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-496.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-496.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-496.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
